fixed css for panel overflow in studio

--- a/app/static/scss/studio.scss
+++ b/app/static/scss/studio.scss
@@ -37,6 +37,8 @@
     background: #F0F0F0;
     border: solid 1px #999;
     box-shadow: 0 0 5px rgba(0,0,0,0.25);
+    position: relative;
+    overflow: hidden;
 
     .panel {
       border: none;
